fix footer on mobile

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -67,7 +67,7 @@
     margin: 0 auto;
     align-items: center;
     justify-content: center;
-    margin-bottom: 17px;
+    margin-bottom: 20px;
     padding-right: 5px;
   }
 }
